# devops-exp-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: k3d-config-min.yaml  pyproject.toml  setup_cluster_min  setup_gitops
scripts/: setup  setup_deploy_key  setup_project
src/backend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
