[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certification"
readme = "README.md"
authors = [
    { name = "Renato", email = "renato@sunfire.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
study-tracker-api = "backend:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
