[project]
name = "backend"
version = "0.2.4"
description = "Backend API for tracking study time for DevOps certification"
readme = "README.md"
authors = [
    { name = "Renato", email = "renato@sunfire.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
